# MilestoneCrowdFunding

./: .gitignore  Cargo.toml  LICENSE  README.md  SUBMISSION_CHECKLIST.md  jobs.json  milestones.json  soroban-integration.ts  tailwind.config.js  wallet-integration.ts
.github/workflows/: ci.yml  deploy.yml
contracts/escrow/: Cargo.toml
contracts/escrow/src/: lib.rs  test.rs
contracts/registry/: Cargo.toml
contracts/registry/src/: lib.rs  test.rs
contracts/vault/: Cargo.toml
contracts/vault/src/: lib.rs  test.rs
docs/: ARCHITECTURE_DECISIONS.md  DEMO_SCRIPT.md
docs/screenshots/: README.md
frontend/: .env.example  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/campaign/[id]/: page.tsx
frontend/src/app/create/: page.tsx
frontend/src/components/: CampaignCard.tsx  LiveEventFeed.tsx  MilestoneTimeline.tsx  PledgeForm.tsx  StateViews.tsx  WalletButton.tsx
frontend/src/hooks/: useEventStream.ts  useWallet.ts
frontend/src/lib/: api.ts  contractClient.ts  format.ts  network.ts  wallet.ts
frontend/src/test/: MilestoneTimeline.test.tsx  StateViews.test.tsx  format.test.ts
frontend/src/types/: domain.ts
scripts/: deploy.sh
src/app/campaign/[id]/: page.tsx
src/components/: SiteHeader.tsx
src/lib/: wallet.ts
