[package]
name = "escrow"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
vault = { path = "../vault", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
